@@ -4,6 +4,9 @@ update-manager (1:0.131) UNRELEASED; urgency=low
     - do not crash if setlocale() fails (LP: #471378)
   * DistUpgrade/DistUpgradeController.py:
     - better message for upgrades over ssh (LP: #463257)
+  * UpdateManager/Core/utils.py:
+    - improve proxy check and show error if proxy settings
+      look invalid (LP: #472168)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:05:01 +0100
 
